--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         padding: 0;
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-747EH7X3KH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-747EH7X3KH');
+    </script>
   </head>
   <body>
     <div id="app"></div>
