--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
     <!-- Preload critical JS -->
     <link rel="modulepreload" href="/src/main.tsx" />
 
-
+    <link rel="icon" type="image/webp" href="/icons/item/blueprint-book.webp">
+    <link rel="apple-touch-icon" href="/icons/item/blueprint-book.webp">
+    <link rel="shortcut icon" type="image/webp" href="/icons/item/blueprint-book.webp">
   </head>
   <body>
     <div id="app"></div>
