--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="icon" type="image/webp" href="/icons/item/blueprint-book.webp">
     <link rel="apple-touch-icon" href="/icons/item/blueprint-book.webp">
     <link rel="shortcut icon" type="image/webp" href="/icons/item/blueprint-book.webp">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3146575260211386"
+       crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
