Add adblock detection.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <link rel="apple-touch-icon" href="/icons/item/blueprint-book.webp">
     <link rel="shortcut icon" type="image/webp" href="/icons/item/blueprint-book.webp">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3146575260211386"
-       crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
+    <script src="/js/wp-banners.js"></script>
   </head>
   <body>
     <div id="app"></div>
