--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <!-- Preload critical JS -->
     <link rel="modulepreload" href="/src/main.tsx" />
 
-    <link rel="icon" type="image/webp" href="/icons/item/blueprint-book.webp">
-    <link rel="apple-touch-icon" href="/icons/item/blueprint-book.webp">
-    <link rel="shortcut icon" type="image/webp" href="/icons/item/blueprint-book.webp">
+    <link rel="icon" type="image/webp" href="https://factorio-icon-cdn.pages.dev/item/blueprint-book.webp">
+    <link rel="apple-touch-icon" href="https://factorio-icon-cdn.pages.dev/item/blueprint-book.webp">
+    <link rel="shortcut icon" type="image/webp" href="https://factorio-icon-cdn.pages.dev/item/blueprint-book.webp">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3146575260211386"
        crossorigin="anonymous"></script>
   </head>
